# ML_MoviePoster

./: .gitignore  README.md
CinemaRecognizingTheme/Assets/: CSVEditor.cs
CinemaRecognizingTheme/Assets/Material/: BG.mat  Blue.mat  GraphBG.mat  Red.mat  UI-Selector.mat  White.mat  graph.mat  solverMap.mat  solverMap.renderTexture
CinemaRecognizingTheme/Assets/Prefab/: Circle.prefab  Error Graph.prefab  Export Fields.prefab  MLPoint.prefab
CinemaRecognizingTheme/Assets/Scenes/: CSVEditor.unity  MLTrainer.unity  PosterClassifier.unity  SampleScene.unity
CinemaRecognizingTheme/Assets/Script/: CSVEditor.cs  CSVReader.cs  ImageLoader.cs  ImageReader.cs  MLPoint.cs  MLPosterClassifier.cs  MLTrainer.cs
CinemaRecognizingTheme/Assets/StreamingAssets/Datasets/Movies/: train-adventure-bio-comedy-familly.csv  train-adventure-bio-comedy-familly.csv.bak  train-horror-comedy.csv  train-semicolon.csv
CinemaRecognizingTheme/Assets/StreamingAssets/Datasets/TestCases/: and.csv  impossible.csv  test_XOR.csv  test_XOR2.csv  test_checkerboard.csv  (+8 more)
CinemaRecognizingTheme/Assets/StreamingAssets/Models/: mlp-4classes.json  mlp-movies.json
CinemaRecognizingTheme/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
MachineLearning-cpp/: .gitignore  CMakeLists.txt  init.bat
MachineLearning-cpp/src/: API.h  Data.h  Dataset.cpp  Dataset.h  JsonHelper.cpp  JsonHelper.h  LossFunction.h  Main.cpp  Matrix.h  NeuralNetwork.cpp  NeuralNetwork.h  OutputFunction.h  Regression.cpp  Regression.h
dataset/: datasetmaker.py
dataset/Multi_Label_dataset/: train-horror-comedy.csv
